# api/modules/v1/models/ApiUser.php
@@ -3,7 +3,6 @@
 namespace api\modules\v1\models;
 
 use common\models\User;
-use yii\helpers\Json;
 
 /**
  * User model for API
@@ -17,13 +16,8 @@ class ApiUser extends User
     {
         return [
             'id' => 'id',
-            'first_name' => 'first_name',
-            'last_name' => 'last_name',
-            'middle_name' => 'middle_name',
-            // 'email' => 'email',
-            'country' => 'country',
+            'name' => 'name',
             'language' => 'language',
-            'group_id' => 'group_id',
         ];
     }
 }
